@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2023 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2023 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2024 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2024 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-plugins-trigger
  * Created on: 31 июл. 2021 г.
@@ -148,6 +148,7 @@ namespace lsp
                 plug::IPort            *pBypass;                // Bypass port
                 plug::IPort            *pDry;                   // Dry output
                 plug::IPort            *pWet;                   // Wet output
+                plug::IPort            *pDryWet;                // Dry/Wet balance
                 plug::IPort            *pGain;                  // Gain output
                 plug::IPort            *pPause;                 // Pause analysis
                 plug::IPort            *pClear;                 // Clear analysis
